Mudanças nos serviçoss